# security-bot-ws

./: .gitignore  README.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Yolo8Inference.msg
diff_drive_controller/: CMakeLists.txt
images/: nav2.webm
ros_components_description/config/: gz_kinova_remappings.yaml  gz_orbbec_astra_remappings.yaml  gz_ouster_os_remappings.yaml  gz_slamtec_rplidar_remappings.yaml  gz_stereolabs_zed_remappings.yaml  gz_velodyne_remappings.yaml
ros_components_description/urdf/: intel_realsense_d435.urdf.xacro  kinova.urdf.xacro  orbbec_astra.urdf.xacro  ouster.urdf.xacro  slamtec_rplidar_a2.urdf.xacro  slamtec_rplidar_a3.urdf.xacro  slamtec_rplidar_s1.urdf.xacro  slamtec_rplidar_s2.urdf.xacro  slamtec_rplidar_s3.urdf.xacro  stereolabs_zed.urdf.xacro  velodyne_puck.urdf.xacro
rosbot_xl_behaviour/: package.xml  setup.cfg  setup.py
rosbot_xl_behaviour/config/: twist_mux.yaml
rosbot_xl_behaviour/launch/: main.launch.py  start.launch.py
rosbot_xl_behaviour/recordings/: video_2025-07-21_18:01:20.avi  video_2025-07-21_18:04:13.avi  video_2025-07-21_18:04:28.avi  video_2025-07-22_23:46:43.avi  video_2025-07-23_00:06:43.avi  video_2025-07-23_13:10:17.avi  video_2025-07-23_13:10:18.avi  video_2025-07-23_13:11:28.avi  video_2025-07-23_13:11:56.avi  video_2025-07-23_14:07:51.avi  video_2025-07-23_16:36:14.avi
rosbot_xl_behaviour/rosbot_xl_behaviour/: alarm_alert_node.py  control.py  human_tracking.py  initial_pose_pub.py  intruder_recorder_node.py  security_patrol_node.py  shelf_inspection_node.py  video_capture_node.py
rosbot_xl_bringup/: package.xml  setup.py
rosbot_xl_bringup/config/: ekf.yaml  laser_filter.yaml
rosbot_xl_bringup/launch/: bringup.launch.py
rosbot_xl_controller/: package.xml  setup.py
rosbot_xl_controller/config/: diff_drive_controller.yaml  mecanum_drive_controller.yaml
rosbot_xl_controller/launch/: controller.launch.py
rosbot_xl_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_xl_description/config/: components.yaml
rosbot_xl_description/hooks/: rosbot_xl_description.sh.in
rosbot_xl_description/launch/: display.launch.py  rviz.launch.py
rosbot_xl_description/rviz/: rvizconfig.rviz
rosbot_xl_description/urdf/: body.urdf.xacro  gazebo.urdf.xacro  rosbot_xl.urdf.xacro  rosbot_xl_macro.urdf.xacro  webots.urdf.xacro  wheel.urdf.xacro
rosbot_xl_description/urdf/components/: camera_mount.urdf.xacro  camera_mount_extended.urdf.xacro
rosbot_xl_gazebo/: package.xml  setup.py
rosbot_xl_gazebo/config/: gz_intel_realsense_d435_remappings.yaml  gz_orbbec_astra_remappings.yaml  gz_slamtec_rplidar_remappings.yaml  gz_stereolabs_zed_remappings.yaml  gz_velodyne_puck_remappings.yaml
rosbot_xl_gazebo/launch/: spawn.launch.py  warehouse_sim.launch.py  world.launch.py
rosbot_xl_navigation/: CMakeLists.txt  package.xml
rosbot_xl_navigation/config/: nav2_params.yaml  slam_mapping_params.yaml  slam_navigation_params.yaml
rosbot_xl_navigation/launch/: nav2.launch.py
rosbot_xl_navigation/maps/: my_map.pgm  my_map.yaml
rosbot_xl_navigation/rviz/: nav2_default_view.rviz
rosbot_xl_navigation/scripts/: cmd_vel_relay.cpp
warehouse_world/: CMakeLists.txt  package.xml
warehouse_world/models/actor/: model.sdf
warehouse_world/models/actor/meshes/: ANIMATION_standing.dae
warehouse_world/models/aws_robomaker_warehouse_GroundB_01/: model.sdf
warehouse_world/worlds/: zm_robot_empty.sdf  zm_robot_warehouse.sdf
yolo/: package.xml  setup.py
yolo/data/: data.yaml
yolo/yolo/: train.py  yolo_person_detection_node.py
(+3 files in other folders)
