<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_xl_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="garciapaula297@gmail.com">paula</maintainer>
  <license>TODO: License declaration</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>rosbot_xl_controller</exec_depend>

  <exec_depend>laser_filters</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>

  <test_depend>rclpy</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_pytest</test_depend>

  <test_depend>tf2_ros_py</test_depend>
  <test_depend>sensor_msgs</test_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
