<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_xl_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="garciapaula297@gmail.com">paula</maintainer>
  <license>TODO: License declaration</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>rosbot_xl_bringup</exec_depend>
  <exec_depend>husarion_gz_worlds</exec_depend>
  <exec_depend>worlds</exec_depend>


  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <test_depend>rclpy</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>launch_testing</test_depend>

  <test_depend>python3-psutil</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
